--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-fade-in": "^0.1.6",
-    "react-grid-system": "^4.4.6",
-    "reactstrap": "^8.0.0"
+    "react-fade-in": "^0.1.6"
   },
   "devDependencies": {
     "eslint-config-lemon": "^0.3.1"
