--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "dependencies": {
     "next": "^8.1.0",
     "react": "^16.8.6",
+    "react-countup": "^4.2.2",
     "react-dom": "^16.8.6",
     "react-fade-in": "^0.1.6"
   },
   "devDependencies": {
-    "eslint-config-lemon": "^0.3.1"
+    "eslint-config-lemon": "^0.4.13"
   }
 }
